<resources>
    <string name="app_name">Ada</string>
    <string name="app_logo_description">Only personal financial assistant you will ever need!</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="login_create_account_message">Not already registered,</string>
    <string name="create_account_button_text">Create account</string>
    <string name="sign_up_title">Register with Ada</string>
    <string name="email_label">E-mail</string>
    <string name="my_account">My account</string>
    <string name="my_finance">My finance</string>
    <string name="sign_out">Sign out</string>
    <string name="overall_summary">Overall summary</string>
    <string name="my_savings">My savings</string>
    <string name="my_loans">My loans</string>
    <string name="my_incomes">My incomes</string>
    <string name="my_expenses">My expenses</string>
    <string name="my_cards">My cards</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="usernameColon">Username:</string>
    <string name="emailColon">E-mail:</string>
    <string name="update_account">Update account</string>
    <string name="change_password">Change password</string>
    <string name="deleteAccount">Delete account</string>
    <string name="add_income">+ Add income</string>
    <string name="add_expenditure">+ Add Expense</string>
    <string name="current_balance">Current balance:</string>
    <string name="select_year">Select year:</string>
    <string name="select_month">Select month:</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="add_savings">+ Add savings</string>
    <string name="savings">Savings</string>
    <string name="amount">Amount</string>
    <string name="interest_amount">Interest amount</string>
    <string name="add_this_saving">Add this saving</string>
    <string name="saving_name">Saving name</string>
    <string name="saving_type">Saving type</string>
    <string name="start_date">Start date</string>
    <string name="bank">Bank</string>
    <string name="duration">Duration</string>
    <string name="interest_type">Interest type</string>
    <string name="annual_interest">Annual interest</string>
    <string name="update_this_saving">Update this saving</string>
    <string name="update_savings">Update saving</string>
    <string name="name">"Name: "</string>
    <string name="end_date">End date</string>
    <string name="total_amount">Total amount</string>
    <string name="total_interest">Total interest</string>
    <string name="monthly_interest">Monthly interest</string>
    <string name="delete_this_saving">Delete this saving</string>
    <string name="add_loan">+ Add loan</string>
    <string name="total_loan_amount">Total loan amount</string>
    <string name="loans">Loans</string>
    <string name="balance">Balance</string>
    <string name="loan_name">Loan name</string>
    <string name="loan_type">Loan type</string>
    <string name="add_this_loan">Add this loan</string>
    <string name="monthly_due_amount">Monthly due amount</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="balance_amount">Balance amount</string>
    <string name="update_this_loan">Update this loan</string>
    <string name="delete_this_loan">Delete this loan</string>
    <string name="update_loan">Update loan</string>
</resources>


