<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/textWhite"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appLogoDescription"
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/marck_script"
            android:text="@string/app_logo_description"
            android:textAlignment="center"
            android:textColor="@color/textWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/loginUsernameInput"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:background="@drawable/light_text_input"
            android:ems="10"
            android:hint="@string/username_label"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/textDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appLogoDescription" />

        <EditText
            android:id="@+id/loginPasswordInput"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/light_text_input"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/textDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginUsernameInput" />

        <Button
            android:id="@+id/signinBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_btn_rounded"
            android:text="@string/sign_in_button_text"
            android:textColor="@color/textDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordInput" />

        <TextView
            android:id="@+id/notRegisteredMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/login_create_account_message"
            android:textAlignment="center"
            android:textColor="@color/textWhite"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signinBtn" />

        <Button
            android:id="@+id/loginCreateAccountBtn"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/light_blue_btn_rounded"
            android:text="@string/create_account_button_text"
            android:textColor="@color/textDark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notRegisteredMessage" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>